# Wishmaster-Desktop

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-cpu.yml  build-linux.yml  build.yml
docs/: OM_LLM_ARCHITECTURE.md  OM_VISION_WITHOUT_OLLAMA.md
resources/: resources.qrc
scripts/: build-cuda.ps1  build-cuda.sh  check-tauri-versions.cjs  create-ico.cjs  install-deb.sh  install-deps-linux.sh  validate-build.js
src/: App.tsx  chatwidget.cpp  chatwidget.h  database.cpp  database.h  index.css  main.cpp  main.tsx  mainwindow.cpp  mainwindow.h  modelmanager.cpp  modelmanager.h  settingsdialog.cpp  settingsdialog.h  store.test.ts  store.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json  wishmaster.desktop
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep  awq_converter.py
src-tauri/src/: commands.rs  database.rs  embeddings.rs  errors.rs  hf_models.rs  llm.rs  logging.rs  main.rs  ollama.rs  openai_compat.rs  voice.rs
src/api/: api.test.ts  index.ts
src/components/: ChatInput.test.tsx  ChatInput.tsx  ChatMessage.test.tsx  ChatMessage.tsx  ModelBrowserModal.tsx  Sidebar.test.tsx  Sidebar.tsx
src/lib/: errors.ts
src/llm/: llamaengine.cpp  llamaengine.h
src/pages/: ChatPage.tsx  MemoryPage.tsx  ModelsPage.tsx  SettingsPage.tsx  VoiceClonePage.tsx
src/persona/: personaanalyzer.cpp  personaanalyzer.h
src/test/: setup.ts
src/types/: index.ts  types.test.ts
src/voice/: sttengine.cpp  sttengine.h  ttsengine.cpp  ttsengine.h
