[package]
name = "wishmaster-desktop"
version = "1.0.0"
description = "Local AI Assistant with Voice Cloning"
authors = ["Wishmaster Team"]
license = "MIT"
repository = "https://github.com/antsincgame/Wishmaster-Desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
once_cell = "1"
base64 = "0.21"
thiserror = "1.0"  # Custom error types
shellexpand = "3"  # Shell path expansion (~, $VAR)

# LLM - native llama.cpp bindings (CPU by default, CUDA optional)
llama-cpp-2 = "0.1"

# Embeddings for semantic search / RAG (optional - requires glibc 2.38+)
# Using latest fastembed with native TLS for ort downloads
fastembed = { version = "5", default-features = false, features = ["ort-download-binaries", "hf-hub-native-tls"], optional = true }

# Audio - placeholder (add cpal + hound later for voice features)
# cpal = "0.15"
# hound = "3.5"

# STT - placeholder (add whisper-rs later)
# whisper-rs = "0.10"

# TTS - placeholder (add ort later for ONNX models)
# ort = "2.0"

[features]
default = ["custom-protocol", "embeddings", "cuda"]
custom-protocol = ["tauri/custom-protocol"]

# Embeddings for semantic search / RAG (requires glibc 2.38+ / Ubuntu 24.04+)
embeddings = ["dep:fastembed"]

# CUDA acceleration (requires CUDA toolkit at build and runtime)
# Local build without CUDA: cargo build --no-default-features --features "custom-protocol,embeddings"
cuda = ["llama-cpp-2/cuda", "nvml-wrapper"]

# NVML for real GPU name and VRAM (compiles everywhere, runtime-only loading via libloading)
nvml-wrapper = { version = "0.11", optional = true }

[dev-dependencies]
tempfile = "3.10"  # For creating temp directories in tests

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = false  # Required for Tauri bundler
